--- a/.github/workflows/s5_lucy-fe-cd-symfony.yml
+++ b/.github/workflows/s5_lucy-fe-cd-symfony.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
     paths:
-      - "ressources/s5/$USER-SLUG/projets/ci-cd-symfony/**"
+      - "ressources/s5/lucy-fe/projets/ci-cd-symfony/**"
 
 defaults:
   run:
-    working-directory: ressources/s5/$USER-SLUG/projets/ci-cd-symfony
+    working-directory: ressources/s5/lucy-fe/projets/ci-cd-symfony
 
 jobs:
   ci-symfony:
